tests/baselines/reference/parserMemberFunctionDeclaration3.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration3.ts(2,12): error TS1029: 'public' modifier must precede 'static' modifier.


==== tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration3.ts (1 errors) ====
    class C {
        static public Foo() { }
               ~~~~~~
!!! error TS1029: 'public' modifier must precede 'static' modifier.
    }